welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: missing parameter type
	if (bis=>"3") {
            ^Poucet:12: error: value =< is not a member of Int
	if (bis=<"2") {
               ^